--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Themes/Generic.xaml
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Themes/Generic.xaml
@@ -20,6 +20,6 @@
         <ResourceDictionary Source="/WPFToolkit.Extended;component/PropertyGrid/Themes/Generic.xaml" />
         <ResourceDictionary Source="/WPFToolkit.Extended;component/TimePicker/Themes/Generic.xaml" />
         <ResourceDictionary Source="/WPFToolkit.Extended;component/WatermarkTextBox/Themes/Generic.xaml" />
-    </ResourceDictionary.MergedDictionaries>
-
+        <ResourceDictionary Source="/WPFToolkit.Extended;component/Wizard/Themes/Generic.xaml" />
+    </ResourceDictionary.MergedDictionaries>    
 </ResourceDictionary>
