PropertyGrid: finished CollectionEditor control.  This editor will only work for collections that implement the IList interface.

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/PropertyGrid/Implementation/Editors/CollectionEditor.xaml
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/PropertyGrid/Implementation/Editors/CollectionEditor.xaml
@@ -7,7 +7,7 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <TextBlock Text="(Collection)" VerticalAlignment="Center" />
-        <Button Grid.Column="1"
+        <Button x:Name="_editorButton" Grid.Column="1"
                 Content=" ... "
                 Click="Button_Click"/>
     </Grid>
