PropertyGrid: added ShowAdvancedOptions property.

--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/PropertyGrid/Themes/Generic.xaml
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/PropertyGrid/Themes/Generic.xaml
@@ -278,7 +278,7 @@
 
                                     <TextBlock Text="{Binding DisplayName, RelativeSource={RelativeSource TemplatedParent}}" HorizontalAlignment="Stretch" TextTrimming="CharacterEllipsis"/>
 
-                                    <Grid Grid.Column="1" HorizontalAlignment="Right" Margin="5,0,5,0" 
+                                    <Grid Grid.Column="1" HorizontalAlignment="Right" Margin="5,0,5,0"  Visibility="{Binding ShowAdvancedOptions, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:PropertyGrid}, Converter={StaticResource BooleanToVisibilityConverter}}"
                                           utilities:ContextMenuUtilities.OpenOnMouseLeftButtonClick="True"
                                           ContextMenu="{StaticResource ContextMenu}" >
 
