finished the base architecture for the sample application.  You will be able to view both the XAML and the C# code in tabs while running the sample application.  Now I just need to start adding some samples.

--- a/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/NavigationView.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/NavigationView.xaml
@@ -3,8 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:views="clr-namespace:Samples.Modules.Button.Views"
               Header="Button Controls" Tag="{x:Type views:HomeView}">
+    
+    <TreeViewItem.Resources>
+        <Style TargetType="views:NavigationView" BasedOn="{StaticResource {x:Type TreeViewItem}}" />
+    </TreeViewItem.Resources>
 
     <TreeViewItem Header="ButtonSpinner" Tag="{x:Type views:ButtonSpinnerView}"/>
+    <TreeViewItem Header="DropDownButton" />
     <TreeViewItem Header="SplitButton" Tag="{x:Type views:SplitButtonView}"/>
 
 </TreeViewItem>
