--- a/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/ButtonSpinnerView.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Button/Views/ButtonSpinnerView.xaml
@@ -1,11 +1,9 @@
-﻿<UserControl x:Class="Samples.Modules.Button.Views.ButtonSpinnerView"
+﻿<infControls:DemoView x:Class="Samples.Modules.Button.Views.ButtonSpinnerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:infControls="clr-namespace:Samples.Infrastructure.Controls;assembly=Samples.Infrastructure"
+                      Title="ButtonSpinner">
     <Grid>
         <TextBlock Text="ButtonSpinner View" />
     </Grid>
-</UserControl>
+</infControls:DemoView>
