--- a/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.PropertyGrid/Views/NavigationView.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.PropertyGrid/Views/NavigationView.xaml
@@ -4,4 +4,8 @@
               xmlns:views="clr-namespace:Samples.Modules.PropertyGrid.Views"
               Header="PropertyGrid" Tag="{x:Type views:HomeView}">
 
+    <TreeViewItem.Resources>
+        <Style TargetType="views:NavigationView" BasedOn="{StaticResource {x:Type TreeViewItem}}" />
+    </TreeViewItem.Resources>
+
 </TreeViewItem>
