--- a/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Wizard/Views/HomeView.xaml
+++ b/ExtendedWPFToolkitSolution/Src/Samples/Modules/Samples.Modules.Wizard/Views/HomeView.xaml
@@ -1,23 +1,10 @@
-﻿<UserControl x:Class="Samples.Modules.Wizard.Views.HomeView"
+﻿<infControls:DemoView x:Class="Samples.Modules.Wizard.Views.HomeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:extToolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit/extended">
+             xmlns:infControls="clr-namespace:Samples.Infrastructure.Controls;assembly=Samples.Infrastructure"
+             xmlns:extToolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit/extended"
+                      Title="Wizard">
     <Grid>
-        <extToolkit:Wizard >
-            <extToolkit:WizardPage x:Name="page1" Title="Page 1 Title"
-                                   Description="Page 1 Description" >
-                <Label Content="Page 1 content" />
-            </extToolkit:WizardPage>
-            <extToolkit:WizardPage x:Name="page2" Title="Page 2 Title"
-                                   Description="Page 2 Description"
-                                   NextPage="{Binding ElementName=page3}"
-                                   PreviousPage="{Binding ElementName=page1}" >
-                <Label Content="Page 2 content" />
-            </extToolkit:WizardPage>
-            <extToolkit:WizardPage x:Name="page3" Title="Page 3 Title"
-                                   Description="Page 3 Description" CanFinish="True">
-                <Label Content="Page 3 content" />
-            </extToolkit:WizardPage>
-        </extToolkit:Wizard>
+        <TextBlock Text="Wizard View" />
     </Grid>
-</UserControl>
+</infControls:DemoView>
